2016-01-25  Oliver Lemke  <olemke@core-dump.info>

	* Typhon now supports reading binary ARTS XML files. (Sparse and
	SpeciesAuxData pending).

	* typhon/arts/xml/__init__.py:

	Open and pass binary file pointer to parse function if necessary.

	* typhon/arts/xml/read.py:

	(ARTSTypesLoadMultiplexer): Add keyword binaryfp. Implement reading
	from binary file where applicable.

	(ARTSElement): Add binaryfp attribute and pass it to
	ARTSTypesLoadMultiplexer.

	(parse): Create local copy of class ARTSElement and set binaryfp.

2016-01-21  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/{modules.rst,utils.rst}: Included utils to documentation.

	* typhon/utils/latex.py:

	It is now possible to pass headings for table columns.

	Fixed multi-line example in docstring.

2016-01-15  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: With 0.1.0 out the door, moving on to 0.1.1.

2016-01-15  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Increase version to 0.1.0.

2016-01-14  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/retrieval.py: fixed typecheck for grids in RetrievalQuantity.

2016-01-14  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/{arts.rst,modules.rst,xml.rst}:

	Included new modules and packages to Sphinx index. Also made the usage of
	different heading styles consistent.

	* typhon/__init__.py: Included utils to __all__.

	* typhon/arts/catalogues.py:

	Implementation of data types related to catalogues. Currently containing
	ArrayOfLineRecord, CIARecord, SpeciesAuxData, GasAbsLookup, SpeciesTag and
	Sparse.

	* typhon/arts/griddedfield.py:

	Small fixes:
	GriddedField names are now read and stored.
	It is now possibl to clear member variables.
	Improvement of typechecks.

	* typhon/arts/retrieval.py: Implementation of RetrievalQuantity class.

	* typhon/arts/scattering.py:

	Implementation of scattering related data types such as SingleScatteringData
	and ScatteringMetaData.

	* typhon/arts/sensor.py:
