@@ -1,0 +1,4 @@
+
+* Writing empty arrays currently throws an error because the type of the array
+is derived from its first element.
+
